margin: 0 auto fixed flexbox on safari / firefox!!!!

--- a/style.scss
+++ b/style.scss
@@ -399,56 +399,61 @@ progress::-webkit-progress-bar {
 	}
 }
 
+.container_thumbs {
+	display: block;
+    position: relative;
+    margin: 0 auto;
+    width: 100%;
+	
+	.flex-container {
+	  	padding: 0;
+	  	margin: 0 auto;
+	  	list-style: none;
 
-.flex-container {
-  	padding: 0;
-  	margin: 0;
-  	list-style: none;
+	 	display: -webkit-box;
+	  	display: -moz-box;
+	  	display: -ms-flexbox;
+	  	display: -webkit-flex;
+	  	display: flex;
 
- 	display: -webkit-box;
-  	display: -moz-box;
-  	display: -ms-flexbox;
-  	display: -webkit-flex;
-  	display: flex;
+	  	flex-flow: row wrap;
+		-webkit-flex-flow: row wrap;
+	  	justify-content: space-around;
+	  	cursor: pointer;
+	  	margin-top: -150px;
+	  	background-repeat: no-repeat;
 
-  	flex-flow: row wrap;
-	-webkit-flex-flow: row wrap;
-  	justify-content: space-around;
-  	cursor: pointer;
-  	margin-top: -150px;
-  	background-repeat: no-repeat;
+	  	.box {
+	  		background-size: cover;
+	  		background-repeat: no-repeat;
+	  		margin: 0 auto;
 
-  	.box {
-  		background-size: cover;
-  		background-repeat: no-repeat;
+		   	.flex-item {
+			  background: transparent;
+			 // background-color: tomato;
+			  padding: 6px;
+			  width: 300px;
+			  height: 300px;
+			  margin-top: 10px;
+			  list-style: none;
+			  line-height: 250px;
 
-	   	.flex-item {
-		  //background: transparent;
-		  background-color: tomato;
-		  padding: 6px;
-		  width: 300px;
-		  height: 300px;
-		  margin-top: 10px;
-		  list-style: none;
-		  line-height: 250px;
+			  color: white;
+			  font-weight: bold;
+			  font-size: 3em;
+			  text-align: center;
+			  
+			  background-clip: content-box;
 
-		  color: white;
-		  font-weight: bold;
-		  font-size: 3em;
-		  text-align: center;
-		  
-		  background-clip: content-box;
-		  box-sizing: border-box;
-
-		  text-shadow: 2px 2px rgba(50,68,100,.5);
-		  
-		 // -webkit-clip-path: polygon(25% 0, 100% 0, 100% 100%, 0 100%, 0 25%);
-		 // clip-path: polygon(25% 0, 100% 0, 100% 100%, 0 100%, 0 25%);
-		 
+			  text-shadow: 2px 2px rgba(50,68,100,.5);
+			  
+			 // -webkit-clip-path: polygon(25% 0, 100% 0, 100% 100%, 0 100%, 0 25%);
+			 // clip-path: polygon(25% 0, 100% 0, 100% 100%, 0 100%, 0 25%);
+			 
+			}
 		}
 	}
 }
-
 
 .box.one {
 	background-image: url('http://giangnguyendesign.com/wp-content/uploads/2014/12/thumb_fuzel.png');
